--- a/index.html
+++ b/index.html
@@ -136,6 +136,49 @@
   <h3>
     <u>
       <strong>
+        IN-HAND PROFICIENCIES
+      </strong>
+    </u>
+  </h3>
+
+  <table width=100%>
+
+    <tr>
+      <td>
+
+        <table>
+          <tr>
+            <td>C language</td>
+            <td>⭐⭐⭐⭐🌑</td>
+          </tr>
+          <tr>
+            <td>C++ Language</td>
+            <td>⭐⭐⭐⭐🌑</td>
+          </tr>
+        </table>
+      </td>
+
+      <td>
+
+        <table>
+          <tr>
+            <td>Java Language</td>
+            <td>⭐⭐⭐⭐🌑</td>
+          </tr>
+          <tr>
+            <td>Android Development</td>
+            <td>⭐⭐⭐🌑🌑</td>
+          </tr>
+        </table>
+      </td>
+
+    </tr>
+
+  </table>
+
+  <h3>
+    <u>
+      <strong>
         INTERESTS AND HOBBIES
       </strong>
     </u>
@@ -155,7 +198,15 @@
 
   <hr size = "3" noshade />
 
-  <strong><a href="contact-me.html">Contact me.</a></strong>
+  <h3>
+    <u>
+      <strong>
+        <a href="contact-me.html">Contact me.</a>
+      </strong>
+    </u>
+  </h3>
+
+  <hr size = "3" noshade />
 
 </body>
 
