--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <p>
           <em>
-            A student from <strong><a href="www.gjust.ac.in">Guru Jambheshwar
+            A student from <strong><a href="http://www.gjust.ac.in/">Guru Jambheshwar
               University of Science & Technology, Hisar</a></strong>
           </em>
         </p>
@@ -61,7 +61,7 @@
 
     <ul>
 
-      <li><a href="www.gjust.ac.in">Guru Jambheshwar University of Science and Technology, Hisar</a></li>
+      <li><a href="http://www.gjust.ac.in/">Guru Jambheshwar University of Science and Technology, Hisar</a></li>
       <li>Bachelor of Technology in Computer Science Engineering</li>
       <li>6.68 C.G.P.A.</li>
 
@@ -79,7 +79,7 @@
 
     <ul>
 
-      <li><a href="www.sdvidyaambala.com">D.H.D.S.D. Public School, Ambala Cantt.</a></li>
+      <li><a href="http://www.sdvidyaambala.com/">D.H.D.S.D. Public School, Ambala Cantt.</a></li>
       <li>Informatics Practices, Physics, Chemistry, Math, English</li>
       <li>68.2%</li>
 
@@ -141,7 +141,7 @@
     </u>
   </h3>
 
-  <table width=100%>
+  <table width=100% cellspacing=20>
 
     <tr>
       <td>
